stackable grid fix for list item overlap on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -18,11 +18,6 @@ code {
   padding: 25px; 
 }
 
-/* #grid {
-  margin-left: 115px;
-  padding: 25px;
-} */
-
 #hidden-card {
   height: 450px;
   width: 305px !important;
@@ -57,3 +52,8 @@ code {
 #delete-button {
   margin-right: 75px; 
 }
+
+.bookshop-button {
+  margin-left: 10px; 
+}
+
